# OS-labs

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: gcd_euclid_and_binary.h  gcd_naive_and_ternary.h
src/: gcd_euclid_and_binary.c  gcd_naive_and_ternary.c  program1.c  program2.c
